gcp-not-production/devops/jenkins/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: jenkins
