gcp-not-production/devops/jenkins/jenkins-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins
  namespace: devops
spec:
  hosts:
  - "jenkins.runsix.app"
  gateways:
  - istio.default.svc.cluster.local
  http:
  - name: "jenkins"
    route:
      - destination:
          host: jenkins.devops.svc.cluster.local
